<resources>
    <string name="app_name">Fitness</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_auto_login">AutoLoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="sugar">Sugar</string>
    <string name="number">#</string>
    <string name="add_food">Add Food</string>
    <string name="delete_food">Delete Food</string>
    <string name="food">Food</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="hi">hi</string>
    <string name="logout">Logout</string>
    <string name="nutrition">Nutrition</string>
    <string name="fitness">Fitness</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="search">Search</string>
    <string name="carbs_g">Carbs/g:</string>
    <string name="fat_g">Fat/g:</string>
    <string name="energy_kcal">Energy/KCal:</string>
    <string name="protein_g">Protein/g:</string>
    <string name="nameDialog">Name:</string>
    <string name="quantity_g">Quantity/g:</string>
    <string name="_100">100</string>
    <string name="add_to_local_database">Add to local database</string>
    <string name="calories_g">Calories/g:</string>
    <string name="image_url">Image URL</string>
    <string name="change_date">Change Date</string>
    <string name="additional_information">additional information</string>
    <string name="breakfast">Breakfast</string>
    <string name="duration">Duration/mins:</string>
    <string name="mass">Mass</string>
    <string name="carbs">carbs</string>
    <string name="start">Start</string>
    <string name="localfitnessfragment">LocalFitnessFragment</string>
    <string name="localfoodfragment">LocalFoodFragment</string>
    <string name="local_database">Local Database</string>
    <string name="requst_from_online_database">Requst From Online Database</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="type">Type</string>


</resources>
