<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/login_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/username" />
    
    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_lock"
        android:hint="@string/password" />

    <Button
        android:id="@+id/login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/login" />

    <Button
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/register" />




</LinearLayout>