<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TableRow
            android:padding="5dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/nameDialog"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/single_food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"/>
        </TableRow>
        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>

        <TableRow
            android:padding="5dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/energy_kcal"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/single_food_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center" />
        </TableRow>

        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>

        <TableRow
            android:padding="5dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/protein_g"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/single_food_protein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"/>
        </TableRow>

        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>

        <TableRow
            android:padding="5dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/fat_g"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/single_food_fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"/>
        </TableRow>

        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>

        <TableRow
            android:padding="5dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/carbs_g"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/single_food_carbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:textAlignment="center"/>
        </TableRow>

        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>

        <TableRow
            android:padding="5dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity_g"
                android:textSize="25dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_100"
                android:textSize="25dp"
                android:textAlignment="center"/>
        </TableRow>
        <View
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"/>
    </TableLayout>

    <ImageView
        android:id="@+id/single_food_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"/>
</LinearLayout>