<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="20dp"
    app:cardCornerRadius="10dp"
    android:orientation="horizontal"
    tools:context=".activities.SingleLocalFitness">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/nameDialog" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/home_fitness_input_dialog_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/energy_kcal" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/home_fitness_input_dialog_calories"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/duration" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/home_fitness_input_dialog_duration"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/home_fitness_input_dialog_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_local_database"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/dialog_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/notification_false" />

    </LinearLayout>
</androidx.cardview.widget.CardView>