<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:text="@string/nameDialog"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/single_local_fitness_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"/>
        </TableRow>
        <TableRow
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:text="@string/calories_g"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/single_local_fitness_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"/>
        </TableRow>
        <TableRow
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:text="@string/duration"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/single_local_fitness_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"/>
        </TableRow>

    </TableLayout>





</LinearLayout>