<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SingleFitness"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.SingleFitness"
        android:scrollbars="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/date_display"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:textSize="30dp" />

            <Button
                android:id="@+id/change_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="50dp"
                android:text="Change Date" />

        </LinearLayout>


        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="additional information"
            android:fitsSystemWindows="true"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">
            <Button
                android:id="@+id/start_walking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />
            <Button
                android:id="@+id/single_fitness_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/add"/>
            <Button
                android:id="@+id/single_fitness_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/delete"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fitness Activities:"
                android:textSize="25dp"
                android:paddingLeft="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBlack" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".10" />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlack" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".40"
                    android:text="Name"
                    android:textSize="17dp"
                    android:textAlignment="center"/>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlack" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:text="@string/energy_kcal"
                    android:textAlignment="center"
                    android:textSize="17dp"/>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlack" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/duration"
                    android:textAlignment="center" />
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorBlack" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".30"
                    android:text="@string/type"
                    android:textAlignment="center"
                    android:textSize="17dp"/>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBlack" />
        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/single_fitness_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:scrollbars="vertical" />

    </LinearLayout>

</ScrollView>
